# autoft

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  dev-local.sh  plan.md  pyproject.toml
backend/: api.py  app.py  hf_cli.py  judge.py  research_agent.py  train.py
fixtures/: billsum_eval.json  billsum_plan.json  billsum_task.txt
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Comparison.tsx  Dashboard.tsx  PlanPreview.tsx  TaskForm.tsx
frontend/lib/: api.ts  types.ts
local_server/: app.py  engine.py  requirements.txt  run.sh
scripts/: build_kickoff.py  optimize.sh
shared/: catalog.py  hf_tools.py  schemas.py
studio/: .env.example  README.md  bunfig.toml  package.json  tsconfig.json  vite.config.ts
studio/client/: App.tsx  index.html  main.tsx
studio/client/components/: Deck.tsx  LogStream.tsx  LossChart.tsx  MetricCharts.tsx  Notebook.tsx  PlanCard.tsx  Rail.tsx  ReasoningTimeline.tsx  Reveal.tsx  Theater.tsx
studio/client/design/: app.css  tokens.css
studio/client/lib/: api.ts  useRunStream.ts
studio/client/scenes/: Landing.tsx  Studio.tsx
studio/scripts/: dev.ts
studio/server/: index.ts  mock.ts
studio/shared/: types.ts
